# Graph-Structural-PreProcessing-GSP

./: .gitignore  README.md  dataset.py  graph_ops.py  main.py  models.py  pyproject.toml  requirements.txt  yelp.py
Report/: References.bib  iiitdmdiss.cls  report.lof  report.lot  report.tex
Report/App1/: app1.tex
Report/Chapter1/: chapter1.tex
Report/Chapter2/: chapter2.tex
Report/Chapter3/: chapter3.tex
Report/Chapter4/: chapter4.tex
Report/Chapter5/: chapter5.tex
configs/: amazon_music.json  default.json  movielens25m.json  yelp.json
scripts/: _extract_results.py  _gen_latex_tables.py  _results_dump.txt  _tables_output.tex  compute_speedup.py  figures.py  plot_data.json  plot_paper_figures.py  run_ml1m.py  run_ml25m.py  run_pipeline.py  run_sweep_ml1m.sh  run_sweep_ml25m.sh  run_sweep_ml25m_ordered.sh  run_sweep_yelp_compressible.sh  run_yelp_1m.py  run_yelp_compressible.py  run_yelp_pipeline.py
src/gsprec/: __init__.py  config.py
src/gsprec/analytics/: __init__.py  compression_analyzer.py  explainer.py  inference_analyzer.py  recommendation_logger.py  report_generator.py
src/gsprec/graph/: __init__.py  embedding_store.py  gsp_ops.py  precondition.py
src/gsprec/models/: __init__.py  architectures.py  evaluator.py  gnn.py  trainer.py
src/gsprec/pipeline/: runner.py  yelp_runner.py
src/gsprec/utils/: __init__.py  hardware_info.py  metrics_export.py
